--- a/lunamaya.html
+++ b/lunamaya.html
@@ -11,8 +11,8 @@
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="mobile-web-app-capable" content="yes" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <link rel="canonical" href="https://shiowoodsnake.github.io/Forcast/Iseng-Ngebet-Dan-Pasang-Taruh-Rp20-Ribu-Di-Mahjong-Ways.html" />
-        <link rel="alternate" href="https://shiowoodsnake.github.io/Forcast/Iseng-Ngebet-Dan-Pasang-Taruh-Rp20-Ribu-Di-Mahjong-Ways.html" hreflang="id-ID" />
+        <link rel="canonical" href="https://bocahgacor.github.io/beritaviral/lunamaya.html" />
+        <link rel="alternate" href="https://bocahgacor.github.io/beritaviral/lunamaya.html" hreflang="id-ID" />
         <link rel="shortcut icon" type="image/x-icon" href="https://psomantap.github.io/news/LOGO-UTAMA-PSO999.png" />
         <link rel="apple-touch-icon" href="https://psomantap.github.io/news/LOGO-UTAMA-PSO999.png" />
         <link rel="icon" type="image/x-icon" href="https://psomantap.github.io/news/LOGO-UTAMA-PSO999.png" />
@@ -34,7 +34,7 @@
         <!-- Facebook -->
         <meta property="og:title" content="Berita Terbaru: Iseng Ngebet Dan Pasang Taruh Rp 20 Ribu Di Mahjong Ways, Supir Taxi Online Jackpot Rp 100 Juta!" />
         <meta property="og:description" content="Seorang supir taxi online mendapatkan jackpot hingga Rp 100 juta setelah bermain game dengan Live RTP tinggi. Simak kisah lengkapnya!" />
-        <meta property="og:url" content="https://shiowoodsnake.github.io/Forcast/Iseng-Ngebet-Dan-Pasang-Taruh-Rp20-Ribu-Di-Mahjong-Ways.html" />
+        <meta property="og:url" content="https://bocahgacor.github.io/beritaviral/lunamaya.html" />
         <meta property="og:image" content="https://psomantap.github.io/news/Iseng-Ngebet-Dan-Pasang-Taruh-Rp20-Ribu-Di-Mahjong-Ways.png" />
         <meta property="og:image:type" content="image/jpg" />
         <meta property="og:site_name" content="Live RTP Dan Kasino Online 2025" />
@@ -151,7 +151,7 @@
             "@type": "Organization",
             "name": "Live RTP Dan Kasino Online 2025",
             "alternateName": "Berita Terbaru: Iseng Ngebet Dan Pasang Taruh Rp 20 Ribu Di Mahjong Ways, Supir Taxi Online Jackpot Rp 100 Juta!",
-            "url": "https://shiowoodsnake.github.io/Forcast/Iseng-Ngebet-Dan-Pasang-Taruh-Rp20-Ribu-Di-Mahjong-Ways.html",
+            "url": "https://bocahgacor.github.io/beritaviral/lunamaya.html",
             "logo": "https://psomantap.github.io/news/LOGO-UTAMA-PSO999.png"
           }
         </script>
@@ -163,12 +163,12 @@
               "@type": "ListItem",
               "position": 1,
               "name": "Home",
-              "item": "https://shiowoodsnake.github.io/Forcast/Iseng-Ngebet-Dan-Pasang-Taruh-Rp20-Ribu-Di-Mahjong-Ways.html"
+              "item": "https://bocahgacor.github.io/beritaviral/lunamaya.html"
             }, {
               "@type": "ListItem",
               "position": 2,
               "name": "Live RTP Dan Kasino Online 2025",
-              "item": "https://shiowoodsnake.github.io/Forcast/Iseng-Ngebet-Dan-Pasang-Taruh-Rp20-Ribu-Di-Mahjong-Ways.html"
+              "item": "https://bocahgacor.github.io/beritaviral/lunamaya.html"
             }]
           }
         </script>
@@ -178,7 +178,7 @@
             "@type": "NewsArticle",
             "mainEntityOfPage": {
               "@type": "WebPage",
-              "@id": "https://shiowoodsnake.github.io/Forcast/Iseng-Ngebet-Dan-Pasang-Taruh-Rp20-Ribu-Di-Mahjong-Ways.html"
+              "@id": "https://bocahgacor.github.io/beritaviral/lunamaya.html"
             },
             "headline": "Berita Terbaru: Iseng Ngebet Dan Pasang Taruh Rp 20 Ribu Di Mahjong Ways, Supir Taxi Online Jackpot Rp 100 Juta!",
             "description": "Seorang supir taxi online mendapatkan jackpot hingga Rp 100 juta setelah bermain game dengan Live RTP tinggi. Simak kisah lengkapnya!",
@@ -186,7 +186,7 @@
             "author": {
               "@type": "Organization",
               "name": "Live RTP Dan Kasino Online 2025",
-              "url": "https://shiowoodsnake.github.io/Forcast/Iseng-Ngebet-Dan-Pasang-Taruh-Rp20-Ribu-Di-Mahjong-Ways.html"
+              "url": "https://bocahgacor.github.io/beritaviral/lunamaya.html"
             },
             "publisher": {
               "@type": "Organization",
@@ -326,7 +326,7 @@
         </section>
     
         <section class='n-container m-b-normal'>
-          <div class='container' style='text-align: center;'><span>&copy; 2025 <a href="https://shiowoodsnake.github.io/Forcast/Iseng-Ngebet-Dan-Pasang-Taruh-Rp20-Ribu-Di-Mahjong-Ways.html" class="rainbow-text">Live RTP Dan Kasino Online 2025</a>. All Rights Reserved.</span></div>
+          <div class='container' style='text-align: center;'><span>&copy; 2025 <a href="https://bocahgacor.github.io/beritaviral/lunamaya.html" class="rainbow-text">Live RTP Dan Kasino Online 2025</a>. All Rights Reserved.</span></div>
         </section>
       </body>
     </html>
